Lab1/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: flaskapp.local
      http:
        paths:
          - path: /api          # backend route
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /message      # backend route
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /             # everything else → static frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
